# igold_scraper

./: .gitignore  README.md  equivalent_products.json  igold_scraper.py  igold_silver_scraper.py  igold_tavex_gold_products_sorted_2510252218.csv  igold_tavex_gold_products_sorted_2510252232.csv  pyproject.toml  requirements-dev.txt  requirements.txt  tavex_scraper.py
.github/workflows/: daily-scraper.yml  weekly-stats.yml
data/: README.md  products.db
data/gold/: 2025-09-26.json  2025-09-27.json  2025-09-30.json  2025-10-01.json  2025-10-02.json  2025-10-04.json  2025-10-05.json  2025-10-07.json  2025-10-08.json  2025-10-10.json  2025-10-11.json  2025-10-12.json  2025-10-14.json  2025-10-15.json  2025-10-16.json  2025-10-18.json  2025-10-19.json  2025-10-20.json  2025-10-21.json  2025-10-22.json  2025-10-23.json  2025-10-25.json  2025-10-26.json  2025-10-27.json  2025-10-28.json  2025-10-29.json  2025-10-30.json  2025-10-31.json  2025-11-01.json  2025-11-02.json  2025-11-03.json  2025-11-04.json  2025-11-05.json  2025-11-06.json  2025-11-07.json  2025-11-08.json  2025-11-09.json  2025-11-10.json  2025-11-11.json  2025-11-12.json  (+80 more)
data/silver/: 2025-10-23.json  2025-10-25.json  2025-10-26.json  2025-10-27.json  2025-10-28.json  2025-10-29.json  2025-10-30.json  2025-10-31.json  2025-11-01.json  2025-11-02.json  2025-11-03.json  2025-11-04.json  2025-11-05.json  2025-11-06.json  2025-11-07.json  2025-11-08.json  (+84 more)
scripts/: daily_report_generator.py  data_manager.py  live_gold_price.py  price_tracker.py  statistics_generator.py
tests/: __init__.py  conftest.py
(+817 files in other folders)
